added apiRouter for md processing and docs structure

--- a/public/components/header/header.html
+++ b/public/components/header/header.html
@@ -3,8 +3,6 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<link rel="stylesheet" href="/assets/css/navbar.css" />
-		<link rel="stylesheet" href="/assets/css/main.css" />
 		<link rel="stylesheet" href="/assets/css/styles.css" />
 		$CSS_LINKS$
 		<link
@@ -14,9 +12,7 @@
 		<title>$NAV_TITLE$</title>
 	</head>
 	<body>
-		<nav>
-			<a href="/matches">Matches</a>
-		</nav>
+		<nav></nav>
 		<main></main>
 	</body>
 </html>
