--- a/public/components/header/header.html
+++ b/public/components/header/header.html
@@ -5,14 +5,8 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<link rel="stylesheet" href="/assets/css/styles.css" />
 		$CSS_LINKS$
-		<link
-			rel="stylesheet"
-			href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css"
-		/>
+
 		<title>$NAV_TITLE$</title>
 	</head>
-	<body>
-		<nav></nav>
-		<main></main>
-	</body>
+	<body></body>
 </html>
