added MIT License in footer

--- a/public/components/footer/footer.html
+++ b/public/components/footer/footer.html
@@ -2,6 +2,7 @@
 
 <footer>
     <p id="footer-copyright-year"></p>
+    <p id="license"></p>
 </footer>
 <script src="/assets/js/footer.js"></script>
 
